# pubmed-fetcher

./: README.md  pyproject.toml  results.csv
my_project/: get_papers_list.py  parse_papers.py  pubmed_fetcher.py  pubmed_scraper.py  pyproject.toml  save_results.py
