[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Hashmasulthana <hashmasulthana608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
package-name = "^0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
